test/negative/struct_missing_end.mut
# ERROR: missing 'end' to close struct
struct Point
    x: i64
    y: i64
